crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__multiline_type_signature_with_comment_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "f :\n    # comment\n    {}\n\n42\n"
---
(BeginTopLevelDecls
    (BeginTypeOrTypeAlias
        Ident=>LowerIdent@0
        InlineTypeColon=>OpColon@1
        (BeginTypeRecord EndTypeRecord)
    EndTypeOrTypeAlias)
    HintExpr
    Num=>IntBase10@4
EndTopLevelDecls)

[=== canfmt below ===]
TypeAlias(Ident("f"), Record([]))
IntBase10("42")

[=== formatted below ===]

