crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__multiple_fields_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "rec.abc.def.ghi\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (*
            (*
                (* Ident=>LowerIdent@0 DotIdent=>NoSpaceDotLowerIdent@1 EndFieldAccess)
                DotIdent=>NoSpaceDotLowerIdent@2
            EndFieldAccess)
            DotIdent=>NoSpaceDotLowerIdent@3
        EndFieldAccess)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
RecordAccess(RecordAccess(RecordAccess(Ident("rec"), ".abc"), ".def"), ".ghi")

[=== formatted below ===]

