crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__neg_inf_float_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-inf\n"
---
(BeginTopLevelDecls
    HintExpr
    (* Ident=>LowerIdent@1 EndUnaryMinus)
EndTopLevelDecls)

[=== canfmt below ===]
UnaryOp(Minus, Ident("inf"))

[=== formatted below ===]

