crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__negate_multiline_string_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-\"\"\"\"\"\"\n"
---
(BeginTopLevelDecls
    HintExpr
    (* String=>String@1 EndUnaryMinus)
EndTopLevelDecls)

[=== canfmt below ===]
UnaryOp(Minus, String("\"\"\"\"\"\""))

[=== formatted below ===]

