crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__negate_multiline_string_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-(\n    \"\"\"\n    \"\"\")\n"
---
(BeginTopLevelDecls
    HintExpr
    (* (BeginParens String=>String@2 EndParens) EndUnaryMinus)
EndTopLevelDecls)

[=== canfmt below ===]
UnaryOp(Minus, String("\"\"\"\n    \"\"\""))

[=== formatted below ===]

